fixed everything for Dao related to use case end_turn